package pugliesesimone.taxreport.model;

public enum ExpenseState {
    INITIAL,
    PARTIAL,
    COMPLETED,
    BLOCKED
}
