classDiagram
    direction LR

%% --- API LAYER ---
    class MetadataRepository {
        <<Interface>>
        +save(ExpenseStateDTO)
        +findById(String) Optional~ExpenseStateDTO~
    }

    class ExpenseStateDTO {
        <<Record>>
        +String id
        +ValidationStatus status
        +List~SlotStateDTO~ slots
    }

%% --- CORE LAYER ---
    class ExpenseEntry {
        -ExpenseState state
        -List~DocumentSlot~ slots
        +uploadDocument(type, stream)
        +validate()
        +toDTO() ExpenseStateDTO
    }

%% Pattern: STATE
    class ExpenseState {
        <<Interface>>
        +upload(Context, DocType, Stream)
        +validate(Context)
    }
    class OpenState
    class LockedState

%% Pattern: CHAIN OF RESPONSIBILITY
    class RuleEngine {
        -List~RuleValidator~ rules
        +validate(entry)
    }
    class RuleValidator {
        <<Interface>>
        +check(entry, chain)
    }

%% Relazioni
    ExpenseEntry --> ExpenseState : delegates behavior
    ExpenseState <|-- OpenState
    ExpenseState <|-- LockedState

    ExpenseEntry ..> ExpenseStateDTO : maps to
    MetadataRepository ..> ExpenseStateDTO : persists

    RuleEngine o-- RuleValidator : aggregates
    OpenState --> RuleEngine : uses